[package]
name = "anychain-aptos"
description = "A Rust library for Aptos-focused cryptocurrency wallets, enabling seamless transactions on the Aptos blockchain"
version = "0.1.1"
keywords = ["aptos", "blockchain", "cryptocurrency", "wallet", "transactions"]
authors = ["Shawndslee", "cregis.com"]
edition = "2024"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain"

[[example]]
name = "transfer-coin"
path = "examples/transfer-coins.rs"

[dependencies]
anychain-core = { version = "0.1.6" }
aptos-sdk = { git = "https://github.com/0xcregis/aptos-core", branch = "devnet" }
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
curve25519-dalek = { version = "4.1.3", features = ["group"] }
group = "0.13.0"
tiny-bip39 = "0.8.2"
anyhow = "1.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
rand = "0.9.0"
serde = "1.0.219"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }

[dev-dependencies]
once_cell = "1.10.0"
url = { version = "2.4.0", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
